Constructed FormData object should not contain entries for the Image Button submitter by default

https://bugs.webkit.org/show_bug.cgi?id=274214

Reviewed by Chris Dumez.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

In 249999@main, WebKit patched the issue for other input types while left out
`ImageInput`, this is to extend similar solution to `image` input.

Originally, when the activedSumbit flag is set for a image input, its value
is appeneded to a FormData. In the case of form submission in event handler,
we include this when build FormData, while we shouldn't. This removes the following
flag.

Original Patch Credits: Andreu Botella (andreu@andreubotella.com) in bug 234069

* Source/WebCore/html/ImageInputType.cpp:
(WebCore::ImageInputType::handleDOMActivateEvent):
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/constructing-form-data-set-expected.txt:

Canonical link: https://commits.webkit.org/278944@main