Source/WebCore/html/ImageInputType.cpp
@@ -85,8 +85,6 @@ void ImageInputType::handleDOMActivateEvent(Event& event)
 
     Ref<HTMLFormElement> protectedForm(*protectedElement->form());
 
-    protectedElement->setActivatedSubmit(true);
-
     m_clickLocation = IntPoint();
     if (event.underlyingEvent()) {
         Event& underlyingEvent = *event.underlyingEvent();
@@ -103,7 +101,6 @@ void ImageInputType::handleDOMActivateEvent(Event& event)
     if (auto currentForm = protectedElement->form())
         currentForm->submitIfPossible(&event, element()); // Event handlers can run.
 
-    protectedElement->setActivatedSubmit(false);
     event.setDefaultHandled();
 }
 
